# fbautostart

./: AUTHORS  BUGS  CONTRIBUTING  COPYRIGHT  ChangeLog  HACKING  Makefile  Makefile.am  Makefile.in  README  README.markdown  THANKS  configure  configure.ac  setup-build-chain.sh
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: .Makefile.am.swp  Makefile.am  Makefile.in  fbautostart.1.in
doc/asciidoc/: Makefile  fbautostart.txt
include/: comment.hh  dot_desktop.h  entry.hh  exceptions.hh  fbautostart.h  group.hh  invalid.hh  key.hh  machine.hh  main.hh  state.hh  value.hh  xdg_autostart.hh  xdg_model.hh  xdg_parse.hh  xdg_spec.hh
maintainer/: runtests
maintainer/testdirs/testdirg1/autostart/: tdl1-1.desktop  tdl1-2.desktop
maintainer/testdirs/testdirg2/autostart/: tdg2-1.desktop  tdg2-2.desktop
maintainer/testdirs/testdirg3/autostart/: tdg3-1.desktop  tdg3-2.desktop
maintainer/testdirs/testdirl2/autostart/: tdg1-1.desktop  tdg1-2.desktop  tdl2-1.desktop
src/: Makefile  comment.cc  dot_desktop.cpp  entry.cc  fbautostart.cpp  group.cc  invalid.cc  key.cc  machine.cc  main.cc  state.cc  value.cc  xdg_autostart.cc  xdg_model.cc  xdg_parse.cc  xdg_spec.cc
src/.deps/: fbautostart.Po
