# Makefile.am for fbautostart - https://launchpad.net/fbautostart
SUBDIRS = doc
AM_CXXFLAGS = -I./include -Wall
bin_PROGRAMS  = fbautostart
fbautostart_SOURCES = src/comment.cc src/entry.cc src/group.cc src/invalid.cc \
	src/key.cc src/machine.cc src/main.cc src/Makefile src/state.cc \
	src/value.cc src/xdg_autostart.cc src/xdg_model.cc src/xdg_parse.cc \
	src/xdg_spec.cc
